# proseoutline

./: .gitignore  README.md  app.py  articles.py  daily.py  datalayer.py  design_language.md  experiment.db  file_index.db  generator.py  loader.py  main.py  pyproject.toml  requirements.txt  runexp  settings.py  state.py  theme.py  ui_layer_spec.md  vault.py  vault_management.py
.github/workflows/: publish.yml
experiment/: __init__.py  db.py  engine.py  models.py  registry.py
experiment/experiments/: ingest_and_chunk.py
experiment/plugs/: __init__.py  chunk_markdown.py  chunk_recursive.py  embed_chroma.py  obsidian_ingest.py
experiments/ingest-and-chunk-v1/step_00_obsidian_ingest/helterskelter/: 01 Mar 26 - (5-26PM) Week 10.json  01 Mar 26 - (6-19PM) Week 10.json  02 Mar 26 - (6-52PM) Week 10.json  03 Mar 26 - (12-51PM) Week 10.json  03 Mar 26 - (7-13PM) Week 10.json  03 Mar 26 - (9-56AM) Week 10.json
graph_enrichment/: clustering.py  dbconn.py  embeddings.py  enrichments.py  graph_data.py  note.py  read_files.py  realtimeclustering.py
graph_enrichment/chroma/: chroma.sqlite3
pages/: graph.py  index.py  setup.py  shared.py
tests/: test_scan_notes.py
