[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "proseoutline"
version = "0.2.3"
description = "Explore how your notes connect to each other and surface real-time clusters from your Obsidian vault."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "nicegui",
    "openai",
    "chromadb",
    "python-frontmatter",
    "python-dotenv",
    "umap-learn",
    "hdbscan",
    "numpy",
    "langchain-openai",
    "langchain-core",
]

[project.scripts]
proseoutline = "app:serve"

[tool.setuptools]
py-modules = ["app", "settings", "theme", "daily", "vault_management"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*"]
